--- a/src/Circle/Circle.css
+++ b/src/Circle/Circle.css
@@ -2,13 +2,13 @@
   display: inline-block;
   transform: translateZ(1px);
 }
-.lds-circle > div {
+.lds-circle  div {
   display: inline-block;
   width: 64px;
   height: 64px;
   margin: 8px;
   border-radius: 50%;
-  background: #fff;
+  background: cornflowerblue;
   animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 @keyframes lds-circle {
